# rizin

./: BUILDING.md  CODE_OF_CONDUCT.md  DEVELOPERS.md  Doxyfile  meson.build  nvim
binrz/rz-test/: load.cpp  meson.build  run.cpp  rz-test.cpp  rz_test.hpp
librz/analysis/: analysis.cpp  analysis_private.hpp  block.cpp  cc.cpp  class.cpp  cond.cpp  cycles.cpp  data.cpp  dwarf_process.cpp  fcn.cpp  function.cpp  hint.cpp  il_trace.cpp  jmptbl.cpp  labels.cpp  meson.build  meta.cpp  op.cpp  pdb_process.cpp  platform_profile.cpp  platform_target_index.cpp  reflines.cpp  rtti.cpp  rtti_itanium.cpp  rtti_msvc.cpp  serialize_analysis.cpp  similarity.cpp  switch.cpp  types.cpp  value.cpp  var.cpp  var_global.cpp  vtable.cpp  xrefs.cpp
librz/analysis/d/: cc-hexagon-32.sdb.txt  functions-libc.sdb.txt  functions-windows.sdb.txt  functions-windows_bcrypt.sdb.txt  functions-windows_cfgmgr32.sdb.txt  functions-windows_combaseapi.sdb.txt  functions-windows_commctrl.sdb.txt  functions-windows_consoleapi2.sdb.txt  functions-windows_dbghelp.sdb.txt  functions-windows_evntrace.sdb.txt  functions-windows_fileapi.sdb.txt  functions-windows_libloaderapi.sdb.txt  functions-windows_memoryapi.sdb.txt  functions-windows_ncrypt.sdb.txt  functions-windows_objbase.sdb.txt  functions-windows_oleauto.sdb.txt  functions-windows_processthreadsapi.sdb.txt  functions-windows_psapi.sdb.txt  functions-windows_securitybaseapi.sdb.txt  functions-windows_shellapi.sdb.txt  functions-windows_shlwapi.sdb.txt  functions-windows_synchapi.sdb.txt  functions-windows_sysinfoapi.sdb.txt  functions-windows_threadpoolapiset.sdb.txt  functions-windows_userenv.sdb.txt  functions-windows_winbase.sdb.txt  functions-windows_wincred.sdb.txt  functions-windows_wincrypt.sdb.txt  functions-windows_winhttp.sdb.txt  functions-windows_winldap.sdb.txt  functions-windows_winnls.sdb.txt  functions-windows_winreg.sdb.txt  functions-windows_winsock2.sdb.txt  functions-windows_winsvc.sdb.txt  functions-windows_winuser.sdb.txt  functions-windows_ws2spi.sdb.txt  types-windows.sdb.txt  types-windows_bcrypt.sdb.txt  types-windows_combaseapi.sdb.txt  types-windows_commctrl.sdb.txt  (+15 more)
librz/analysis/esil/: esil.cpp  esil_interrupt.cpp  esil_sources.cpp  esil_stats.cpp  esil_trace.cpp
librz/analysis/il/: analysis_il.cpp  analysis_il_trace.cpp
librz/analysis/p/: analysis_6502.cpp  analysis_8051.cpp  analysis_amd29k.cpp  analysis_arc.cpp  analysis_arm_cs.cpp  analysis_arm_hacks.inc  analysis_avr.cpp  analysis_bf.cpp  analysis_chip8.cpp  analysis_cil.cpp  analysis_cr16.cpp  analysis_cris.cpp  analysis_dalvik.cpp  analysis_ebc.cpp  analysis_gb.cpp  analysis_h8300.cpp  analysis_hexagon.cpp  analysis_i4004.cpp  analysis_i8080.cpp  analysis_java.cpp  analysis_rx.cpp  (+38 more)
librz/asm/: acode.cpp  aop.cpp  asm.cpp  binutils_as.cpp  binutils_as.hpp  meson.build
librz/bp/: bp.cpp  bp_io.cpp  bp_plugin.cpp  bp_traptrace.cpp  bp_watch.cpp  meson.build  serialize_bp.cpp
librz/cons/: bar.cpp  canvas.cpp  canvas_line.cpp  cons.cpp  cpipe.cpp  cutf8.cpp  dietline.cpp  grep.cpp  histogram.cpp  html.cpp  hud.cpp  input.cpp  less.cpp  line.cpp  meson.build  output.cpp  pager.cpp  pal.cpp  prompt.cpp  rgb.cpp
librz/core/: agraph.cpp  analysis_objc.cpp  analysis_tp.cpp  basefind.cpp  cagraph.cpp  canalysis.cpp  cannotated_code.cpp  carg.cpp  casm.cpp  cautocmpl.cpp  cbin.cpp  cconfig.cpp  ccrypto.cpp  cdebug.cpp  cdwarf.cpp  cesil.cpp  cfile.cpp  cflag.cpp  cgraph.cpp  chash.cpp  cheap.cpp  cil.cpp  cio.cpp  clang.cpp  cmeta.cpp  cmp.cpp  core.cpp  core_private.hpp  cparser.cpp  cpdb.cpp  cplugin.cpp  cprint.cpp  creg.cpp  csign.cpp  csyscall.cpp  ctypes.cpp  cvfile.cpp  disasm.cpp  fortune.cpp  golang.cpp  (+16 more)
librz/crypto/: crypto.cpp  des.cpp  meson.build
librz/debug/: ddesc.cpp  debug.cpp  desil.cpp  dmap.cpp  dreg.cpp  dsession.cpp  dsignal.cpp  meson.build  pid.cpp  plugin.cpp  serialize_debug.cpp  snap.cpp  trace.cpp
librz/egg/: egg.cpp  egg_Cfile.cpp  egg_lang.cpp  emit_arm.cpp  emit_trace.cpp  emit_x86.cpp  meson.build
librz/flag/: flag.cpp  meson.build  serialize_flag.cpp  tags.cpp  zones.cpp
librz/hash/: hash.cpp  meson.build  randomart.cpp
librz/il/: il_events.cpp  il_export_json.cpp  il_export_string.cpp  il_graph.cpp  il_opcodes.cpp  il_reg.cpp  il_routines.cpp  il_validate.cpp  il_vm.cpp  il_vm_eval.cpp  meson.build  theory_bitv.cpp  theory_bool.cpp  theory_effect.cpp  theory_fbasic.cpp  theory_init.cpp  theory_mem.cpp
librz/include/: meson.build  rz_agraph.hpp  rz_analysis.hpp  rz_asm.hpp  rz_basefind.hpp  rz_bin.hpp  rz_bin_dwarf.hpp  rz_bin_source_line.hpp  rz_bind.hpp  rz_bp.hpp  rz_cmd.hpp  rz_cmp.hpp  rz_config.hpp  rz_cons.hpp  rz_constructor.hpp  rz_core.hpp  rz_crypto.hpp  rz_debug.hpp  rz_demangler.hpp  rz_diff.hpp  rz_egg.hpp  rz_endian.hpp  rz_flag.hpp  rz_flirt.hpp  rz_getopt.hpp  rz_hash.hpp  rz_heap_glibc.hpp  rz_heap_jemalloc.hpp  rz_il.hpp  rz_io.hpp  rz_lang.hpp  rz_lib.hpp  rz_list.hpp  rz_magic.hpp  rz_main.hpp  rz_parse.hpp  rz_pdb.hpp  rz_platform.hpp  rz_project.hpp  rz_reg.hpp  (+16 more)
librz/io/: io.cpp  io_cache.cpp  io_desc.cpp  io_fd.cpp  io_map.cpp  io_memory.cpp  io_memory.hpp  io_plugin.cpp  ioutils.cpp  meson.build  p_cache.cpp  serialize_io.cpp
librz/socket/: meson.build  run.cpp  rzpipe.cpp  socket.cpp  socket_http.cpp  socket_http_server.cpp  socket_proc.cpp  socket_rap_client.cpp  socket_rap_server.cpp  socket_serial.cpp
librz/type/: base.cpp  format.cpp  function.cpp  helpers.cpp  meson.build  path.cpp  serialize_functions.cpp  serialize_types.cpp  type.cpp  typeclass.cpp
librz/util/: alloc.cpp  annotated_code.cpp  ascii_table.cpp  asn1.cpp  asn1_oids.hpp  assert.cpp  astr.cpp  axml.cpp  axml_resources.hpp  base85.cpp  base91.cpp  big-gmp.cpp  big-ssl.cpp  big.cpp  bitvector.cpp  buf.cpp  buf_bytes.cpp  buf_file.cpp  buf_io.cpp  buf_io_fd.cpp  buf_mmap.cpp  buf_ref.cpp  buf_sparse.cpp  calc.cpp  chmod.cpp  compression.cpp  debruijn.cpp  ebcdic.cpp  event.cpp  file.cpp  getopt.cpp  graph.cpp  graph_drawable.cpp  hex.cpp  idpool.cpp  intervaltree.cpp  iterator.cpp  json_indent.cpp  json_parser.cpp  lang_byte_array.cpp  (+55 more)
(+1154 files in other folders)
