analysis_plugins_list = [
  '6502',
  '8051',
  'amd29k',
  'arm_cs',
  'avr',
  'bf',
  'chip8',
  'cil',
  'cr16',
  'dalvik',
  'ebc',
  'gb',
  'h8300',
  'hexagon',
  'i4004',
  'i8080',
  'java',
  'luac',
  'm68k_cs',
  'm680x_cs',
  'malbolge',
  'mcore',
  'mips_cs',
  'msp430',
  'null',
  'or1k',
  'pic',
  'ppc_cs',
  'propeller',
  'pyc',
  'rl78',
  'rx',
  'rsp',
  'snes',
  'sparc_cs',
  'spc700',
  'sysz',
  'tms320',
  #'tms320c64x',
  'v810',
  'v850',
  'wasm',
  'x86_cs',
  'xap',
  'xcore_cs',
]
if capstone_dep.version() == 'next' or capstone_dep.version().split('.')[0].to_int() > 4
  analysis_plugins_list += 'riscv_cs'
  analysis_plugins_list += 'tricore_cs'
endif

if get_option('use_gpl')
  analysis_plugins_list += [
    'arc',
    'cris',
    'mips_gnu',
    'nios2',
    'riscv',
    'sh',
    'sparc_gnu',
    'vax',
    'xtensa',
    'z80',
  ]
endif

analysis_plugins = {
  'conf_name': 'plugins_analysis',
  'base_cname': 'rz_analysis_plugin_',
  'list': analysis_plugins_list,
}

rz_analysis_sources = [
  'analysis.cpp',
  'block.cpp',
  'cc.cpp',
  'class.cpp',
  'cond.cpp',
  'cycles.cpp',
  'data.cpp',
  'dwarf_process.cpp',
  'esil/esil.cpp',
  'esil/esil_interrupt.cpp',
  'esil/esil_sources.cpp',
  'esil/esil_stats.cpp',
  'esil/esil_trace.cpp',
  'fcn.cpp',
  'function.cpp',
  'hint.cpp',
  'il/analysis_il.cpp',
  'il/analysis_il_trace.cpp',
  'il_trace.cpp',
  'jmptbl.cpp',
  'labels.cpp',
  'meta.cpp',
  'op.cpp',
  'platform_profile.cpp',
  'platform_target_index.cpp',
  'reflines.cpp',
  'rtti.cpp',
  'rtti_itanium.cpp',
  'rtti_msvc.cpp',
  'serialize_analysis.cpp',
  'similarity.cpp',
  'switch.cpp',
  'pdb_process.cpp',
  'types.cpp',
  'value.cpp',
  'var.cpp',
  'var_global.cpp',
  'vtable.cpp',
  'xrefs.cpp',
  'p/analysis_6502.cpp',
  'p/analysis_8051.cpp',
  'p/analysis_amd29k.cpp',
  'p/analysis_arm_cs.cpp',
  'p/analysis_avr.cpp',
  'p/analysis_bf.cpp',
  'p/analysis_chip8.cpp',
  'p/analysis_cil.cpp',
  'p/analysis_cr16.cpp',
  'p/analysis_dalvik.cpp',
  'p/analysis_ebc.cpp',
  'p/analysis_gb.cpp',
  'p/analysis_h8300.cpp',
  'p/analysis_hexagon.cpp',
  'p/analysis_i4004.cpp',
  'p/analysis_i8080.cpp',
  'p/analysis_java.cpp',
  'p/analysis_luac.cpp',
  'p/analysis_m68k_cs.cpp',
  'p/analysis_m680x_cs.cpp',
  'p/analysis_malbolge.cpp',
  'p/analysis_mcore.cpp',
  'p/analysis_mips_cs.cpp',
  'p/analysis_msp430.cpp',
  'p/analysis_null.cpp',
  'p/analysis_or1k.cpp',
  'p/analysis_pic.cpp',
  'p/analysis_ppc_cs.cpp',
  'p/analysis_propeller.cpp',
  'p/analysis_pyc.cpp',
  'p/analysis_rl78.cpp',
  'p/analysis_rsp.cpp',
  'p/analysis_rx.cpp',
  'p/analysis_snes.cpp',
  'p/analysis_sparc_cs.cpp',
  'p/analysis_spc700.cpp',
  'p/analysis_sysz.cpp',
  'p/analysis_tms320.cpp',
  'p/analysis_tms320_c55x_plus.cpp',
  #'p/analysis_tms320c64x.cpp',
  'p/analysis_v810.cpp',
  'p/analysis_v850.cpp',
  'p/analysis_wasm.cpp',
  'p/analysis_x86_cs.cpp',
  'p/analysis_xap.cpp',
  'p/analysis_xcore_cs.cpp',
  #'arch/gb/meta_gb_cmt.cpp',
  'arch/arm/arm_esil32.cpp',
  'arch/arm/arm_esil64.cpp',
  'arch/avr/avr_esil.cpp',
  'arch/avr/avr_il.cpp',
  'arch/arm/arm_il32.cpp',
  'arch/arm/arm_il64.cpp',
  'arch/ppc/ppc_il.cpp',
  'arch/ppc/ppc_il_ops.cpp',
  'arch/ppc/ppc_il_flag_ops.cpp',
  'arch/sh/sh_il.cpp',
  'arch/x86/common.cpp',
  'arch/x86/x86_il.cpp',
  'arch/8051/8051_il.cpp',
  'arch/8051/8051_parse.cpp',
  'arch/v810/v810_il.cpp',
  'arch/v850/v850_il.cpp',
  '../asm/arch/amd29k/amd29k.cpp',
  '../asm/arch/avr/disassembler.cpp',
  '../asm/arch/cil/cil_dis.cpp',
  '../asm/arch/cr16/cr16_disas.cpp',
  '../asm/arch/ebc/ebc_disas.cpp',
  '../asm/arch/h8300/h8300_disas.cpp',
  '../asm/arch/java/jvm.cpp',
  '../asm/arch/mcore/mcore.cpp',
  '../asm/arch/msp430/msp430_disas.cpp',
  '../asm/arch/or1k/or1k_disas.cpp',
  '../asm/arch/pic/pic_midrange.cpp',
  '../asm/arch/ppc/libvle/vle.cpp',
  '../asm/arch/propeller/propeller_disas.cpp',
  '../asm/arch/rsp/rsp_idec.cpp',
  '../asm/arch/sh/disassembler.cpp',
  '../asm/arch/sh/lookup.cpp',
  '../asm/arch/tms320/tms320_dasm.cpp',
  '../asm/arch/tms320/c55x_plus/ins.cpp',
  '../asm/arch/tms320/c55x_plus/c55plus.cpp',
  '../asm/arch/tms320/c55x_plus/c55plus_decode.cpp',
  '../asm/arch/tms320/c55x_plus/decode_funcs.cpp',
  '../asm/arch/tms320/c55x_plus/hashtable.cpp',
  '../asm/arch/tms320/c55x_plus/utils.cpp',
  '../asm/arch/v810/v810_disas.cpp',
  '../asm/arch/v850/v850_disas.cpp',
  '../asm/arch/wasm/wasm.cpp',
  '../asm/arch/pyc/opcode_10.cpp',
  '../asm/arch/pyc/opcode_11.cpp',
  '../asm/arch/pyc/opcode_12.cpp',
  '../asm/arch/pyc/opcode_13.cpp',
  '../asm/arch/pyc/opcode_14.cpp',
  '../asm/arch/pyc/opcode_15.cpp',
  '../asm/arch/pyc/opcode_16.cpp',
  '../asm/arch/pyc/opcode_20.cpp',
  '../asm/arch/pyc/opcode_21.cpp',
  '../asm/arch/pyc/opcode_22.cpp',
  '../asm/arch/pyc/opcode_23.cpp',
  '../asm/arch/pyc/opcode_24.cpp',
  '../asm/arch/pyc/opcode_25.cpp',
  '../asm/arch/pyc/opcode_26.cpp',
  '../asm/arch/pyc/opcode_27.cpp',
  '../asm/arch/pyc/opcode_2x.cpp',
  '../asm/arch/pyc/opcode_30.cpp',
  '../asm/arch/pyc/opcode_31.cpp',
  '../asm/arch/pyc/opcode_32.cpp',
  '../asm/arch/pyc/opcode_33.cpp',
  '../asm/arch/pyc/opcode_34.cpp',
  '../asm/arch/pyc/opcode_35.cpp',
  '../asm/arch/pyc/opcode_36.cpp',
  '../asm/arch/pyc/opcode_37.cpp',
  '../asm/arch/pyc/opcode_38.cpp',
  '../asm/arch/pyc/opcode_39.cpp',
  '../asm/arch/pyc/opcode_310.cpp',
  '../asm/arch/pyc/opcode_3x.cpp',
  '../asm/arch/pyc/opcode_analysis.cpp',
  '../asm/arch/pyc/opcode_arg_fmt.cpp',
  '../asm/arch/pyc/opcode.cpp',
  '../asm/arch/pyc/pyc_dis.cpp',
  '../asm/arch/luac/lua_arch.cpp',
  '../asm/arch/luac/v54/analysis_54.cpp',
  '../asm/arch/luac/v54/opcode_54.cpp',
  '../asm/arch/luac/v53/analysis_53.cpp',
  '../asm/arch/luac/v53/opcode_53.cpp',
  '../asm/arch/rl78/rl78_instr.cpp',
  '../asm/arch/rl78/rl78_maps.cpp',
  '../asm/arch/rl78/rl78_operand.cpp',
  '../asm/arch/rl78/rl78.cpp'
]

if capstone_dep.version() == 'next' or capstone_dep.version().split('.')[0].to_int() > 4
  rz_analysis_sources += 'p/analysis_riscv_cs.cpp'
  rz_analysis_sources += 'p/analysis_tricore_cs.cpp'
  rz_analysis_sources +='arch/tricore/tricore_il.cpp'
endif

if get_option('use_gpl')
  rz_analysis_sources += [
    'p/analysis_arc.cpp',
    'p/analysis_cris.cpp',
    'p/analysis_mips_gnu.cpp',
    'p/analysis_nios2.cpp',
    'p/analysis_riscv.cpp',
    'p/analysis_sh.cpp',
    'p/analysis_sparc_gnu.cpp',
    'p/analysis_vax.cpp',
    'p/analysis_xtensa.cpp',
    'p/analysis_z80.cpp',
    '../asm/arch/xtensa/gnu/xtensa-dis.cpp',
    '../asm/arch/xtensa/gnu/elf32-xtensa.cpp',
    '../asm/arch/xtensa/gnu/xtensa-isa.cpp',
    '../asm/arch/xtensa/gnu/xtensa-modules.cpp',
  ]
endif
rz_analysis_inc = [
  platform_inc,
  include_directories(
    'arch/gb',
  )
]

rz_analysis = library('rz_analysis', rz_analysis_sources,
  include_directories: rz_analysis_inc,
  dependencies: [
    rz_util_dep,
    rz_crypto_dep,
    rz_reg_dep,
    rz_syscall_dep,
    rz_search_dep,
    rz_cons_dep,
    rz_flag_dep,
    rz_hash_dep,
    rz_diff_dep,
    rz_parse_dep,
    rz_asm_dep,
    rz_bin_dep,
    rz_type_dep,
    rz_il_dep,
    capstone_dep
  ],
  install: true,
  implicit_include_directories: false,
  install_rpath: rpath_lib,
  soversion: rizin_libversion,
  version: rizin_version,
  name_suffix: lib_name_suffix,
  name_prefix: lib_name_prefix,
)

rz_analysis_dep = declare_dependency(link_with: rz_analysis,
                                include_directories: rz_analysis_inc)
meson.override_dependency('rz_analysis', rz_analysis_dep)

modules += { 'rz_analysis': {
    'target': rz_analysis,
    'dependencies': [
      'rz_util',
      'rz_crypto',
      'rz_reg',
      'rz_syscall',
      'rz_search',
      'rz_cons',
      'rz_flag',
      'rz_hash',
      'rz_diff',
      'rz_parse',
      'rz_asm',
      'rz_bin',
      'rz_type',
      'rz_il',
    ],
    'plugins': [analysis_plugins]
}}

subdir('d')
