asm_plugins_list = [
  '6502',
  '8051',
  'amd29k',
  'arm_as',
  'arm_cs',
  'avr',
  'bf',
  'chip8',
  'cil',
  'cr16',
  'dalvik',
  'dcpu16',
  'ebc',
  'gb',
  'h8300',
  'hexagon',
  'i4004',
  'i8080',
  'java',
  'lh5801',
  'lm32',
  'luac',
  'm68k_cs',
  'm680x_cs',
  'malbolge',
  'mcore',
  'mcs96',
  'mips_cs',
  'msp430',
  'null',
  'or1k',
  'pic',
  'ppc_as',
  'ppc_cs',
  'propeller',
  'pyc',
  'rl78',
  'rsp',
  'rx',
  'sh',
  'snes',
  'sparc_cs',
  'spc700',
  'sysz',
  'tms320',
  'tms320c64x',
  'v810',
  'v850',
  'wasm',
  'x86_as',
  'x86_cs',
  'x86_nasm',
  'x86_nz',
  'xap',
  'xcore_cs',
]

if capstone_dep.version() == 'next' or capstone_dep.version().split('.')[0].to_int() > 4
  asm_plugins_list += 'riscv_cs'
  asm_plugins_list += 'tricore'
endif

if get_option('use_gpl')
  asm_plugins_list += [
    'arc',
    'cris_gnu',
    'hppa_gnu',
    'lanai_gnu',
    'mips_gnu',
    'nios2',
    'riscv',
    'sparc_gnu',
    'vax',
    'xtensa',
    'z80',
  ]
endif

asm_plugins = {
  'conf_name': 'plugins_asm',
  'base_cname': 'rz_asm_plugin_',
  'list': asm_plugins_list,
}

rz_asm_sources = [
  'asm.cpp',
  'aop.cpp',
  'acode.cpp',
  'binutils_as.cpp',
  'p/asm_6502.cpp',
  'p/asm_8051.cpp',
  'p/asm_amd29k.cpp',
  'p/asm_arm_as.cpp',
  'p/asm_arm_cs.cpp',
  'p/asm_avr.cpp',
  'p/asm_bf.cpp',
  'p/asm_chip8.cpp',
  'p/asm_cil.cpp',
  'p/asm_cr16.cpp',
  'p/asm_dalvik.cpp',
  'p/asm_dcpu16.cpp',
  'p/asm_ebc.cpp',
  'p/asm_gb.cpp',
  'p/asm_h8300.cpp',
  'p/asm_hexagon.cpp',
  'p/asm_i4004.cpp',
  'p/asm_i8080.cpp',
  'p/asm_java.cpp',
  'p/asm_lh5801.cpp',
  'p/asm_lm32.cpp',
  'p/asm_luac.cpp',
  'p/asm_m68k_cs.cpp',
  'p/asm_m680x_cs.cpp',
  'p/asm_malbolge.cpp',
  'p/asm_mcs96.cpp',
  'p/asm_mips_cs.cpp',
  'p/asm_msp430.cpp',
  'p/asm_null.cpp',
  'p/asm_or1k.cpp',
  'p/asm_pic.cpp',
  'p/asm_mcore.cpp',
  'p/asm_ppc_as.cpp',
  'p/asm_ppc_cs.cpp',
  'p/asm_propeller.cpp',
  'p/asm_pyc.cpp',
  'p/asm_rl78.cpp',
  'p/asm_rx.cpp',
  'p/asm_rsp.cpp',
  'p/asm_sh.cpp',
  'p/asm_snes.cpp',
  'p/asm_sparc_cs.cpp',
  'p/asm_spc700.cpp',
  'p/asm_sysz.cpp',
  'p/asm_tms320.cpp',
  'p/asm_tms320c64x.cpp',
  'p/asm_v810.cpp',
  'p/asm_v850.cpp',
  'p/asm_wasm.cpp',
  'p/asm_x86_as.cpp',
  'p/asm_x86_cs.cpp',
  'p/asm_x86_nasm.cpp',
  'p/asm_x86_nz.cpp',
  #'p/asm_x86_vm.cpp',
  'p/asm_xap.cpp',
  'p/asm_xcore_cs.cpp',
  #'arch/6502/6502dis.cpp',
  'arch/amd29k/amd29k.cpp',
  #'arch/8051/8051_disas.cpp',
  'arch/8051/8051_ass.cpp',
  'arch/arm/armass.cpp',
  'arch/arm/armass64.cpp',
  'arch/arm/arm_it.cpp',
  'arch/avr/disassembler.cpp',
  'arch/avr/assembler.cpp',
  'arch/cil/cil_dis.cpp',
  'arch/cr16/cr16_disas.cpp',
  #'arch/dcpu16/asm.cpp',
  #'arch/dcpu16/dis.cpp',
  #'arch/dcpu16/main.cpp',
  'arch/ebc/ebc_disas.cpp',
  #'arch/gb/gbasm.cpp',
  #'arch/gb/gbdis.cpp',
  'arch/h8300/h8300_disas.cpp',
  'arch/hexagon/hexagon.cpp',
  'arch/hexagon/hexagon_arch.cpp',
  'arch/hexagon/hexagon_disas.cpp',
  #'arch/i4004/i4004dis.cpp',
  #'arch/i8080/i8080dis.cpp',
  'arch/java/jvm.cpp',
  'arch/java/assembler.cpp',
  'arch/luac/lua_arch.cpp',
  'arch/luac/v54/opcode_54.cpp',
  'arch/luac/v54/disassembly_54.cpp',
  'arch/luac/v54/assembly_54.cpp',
  'arch/luac/v53/opcode_53.cpp',
  'arch/luac/v53/disassembly_53.cpp',
  'arch/luac/v53/assembly_53.cpp',
  'arch/mips/mipsasm.cpp',
  'arch/msp430/msp430_disas.cpp',
  'arch/or1k/or1k_disas.cpp',
  'arch/pic/pic_baseline.cpp',
  'arch/pic/pic_midrange.cpp',
  'arch/pic/pic_pic18.cpp',
  'arch/mcore/mcore.cpp',
  'arch/ppc/libvle/vle.cpp',
  'arch/ppc/libps/libps.cpp',
  'arch/propeller/propeller_disas.cpp',
  'arch/pyc/opcode_10.cpp',
  'arch/pyc/opcode_11.cpp',
  'arch/pyc/opcode_12.cpp',
  'arch/pyc/opcode_13.cpp',
  'arch/pyc/opcode_14.cpp',
  'arch/pyc/opcode_15.cpp',
  'arch/pyc/opcode_16.cpp',
  'arch/pyc/opcode_20.cpp',
  'arch/pyc/opcode_21.cpp',
  'arch/pyc/opcode_22.cpp',
  'arch/pyc/opcode_23.cpp',
  'arch/pyc/opcode_24.cpp',
  'arch/pyc/opcode_25.cpp',
  'arch/pyc/opcode_26.cpp',
  'arch/pyc/opcode_27.cpp',
  'arch/pyc/opcode_2x.cpp',
  'arch/pyc/opcode_30.cpp',
  'arch/pyc/opcode_31.cpp',
  'arch/pyc/opcode_32.cpp',
  'arch/pyc/opcode_33.cpp',
  'arch/pyc/opcode_34.cpp',
  'arch/pyc/opcode_35.cpp',
  'arch/pyc/opcode_36.cpp',
  'arch/pyc/opcode_37.cpp',
  'arch/pyc/opcode_38.cpp',
  'arch/pyc/opcode_39.cpp',
  'arch/pyc/opcode_310.cpp',
  'arch/pyc/opcode_3x.cpp',
  'arch/pyc/opcode_analysis.cpp',
  'arch/pyc/opcode_arg_fmt.cpp',
  'arch/pyc/opcode.cpp',
  'arch/pyc/pyc_dis.cpp',
  'arch/rl78/rl78_instr.cpp',
  'arch/rl78/rl78_maps.cpp',
  'arch/rl78/rl78_operand.cpp',
  'arch/rl78/rl78.cpp',
  'arch/rx/rx.cpp',
  'arch/rx/rx_opcode_detail.cpp',
  'arch/rx/rx_inst.cpp',
  'arch/rsp/rsp_idec.cpp',
  'arch/sh/disassembler.cpp',
  'arch/sh/assembler.cpp',
  'arch/sh/lookup.cpp',
  #'arch/snes/snesdis.cpp',
  #'arch/spc700/spc700dis.cpp',
  'arch/tms320/c55x_plus/c55plus.cpp',
  'arch/tms320/c55x_plus/c55plus_decode.cpp',
  'arch/tms320/c55x_plus/decode_funcs.cpp',
  'arch/tms320/c55x_plus/hashtable.cpp',
  #'arch/tms320/c55x_plus/hashvector.cpp',
  'arch/tms320/c55x_plus/ins.cpp',
  'arch/tms320/c55x_plus/utils.cpp',
  'arch/tms320/tms320_dasm.cpp',
  'arch/v810/v810_disas.cpp',
  'arch/v850/v850_disas.cpp',
  'arch/wasm/wasm.cpp',
  #'arch/xap/dis.cpp',
  'arch/z80/z80.cpp',
]

if capstone_dep.version() == 'next' or capstone_dep.version().split('.')[0].to_int() > 4
  rz_asm_sources += 'p/asm_riscv_cs.cpp'
  rz_asm_sources += 'p/asm_tricore_cs.cpp'
endif

if get_option('use_gpl')
  rz_asm_sources += [
    'arch/arc/gnu/arc-dis.cpp',
    'arch/arc/gnu/arc-ext.cpp',
    'arch/arc/gnu/arc-opc.cpp',
    'arch/arc/gnu/arcompact-dis.cpp',
    'arch/cris/gnu/cris-dis.cpp',
    'arch/cris/gnu/cris-opc.cpp',
    'arch/hppa/gnu/hppa-dis.cpp',
    'arch/lanai/gnu/lanai-dis.cpp',
    'arch/lanai/gnu/lanai-opc.cpp',
    'arch/mips/gnu/mips-dis.cpp',
    'arch/mips/gnu/mips-opc.cpp',
    'arch/mips/gnu/mips16-opc.cpp',
    'arch/nios/gnu/nios2-dis.cpp',
    'arch/nios/gnu/nios2-opc.cpp',
    #'arch/riscv/riscv-opc.cpp',
    #'arch/riscv/riscv.cpp',
    'arch/sparc/gnu/sparc-dis.cpp',
    'arch/sparc/gnu/sparc-opc.cpp',
    'arch/vax/vax-dis.cpp',
    'arch/xtensa/gnu/elf32-xtensa.cpp',
    'arch/xtensa/gnu/xtensa-dis.cpp',
    'arch/xtensa/gnu/xtensa-isa.cpp',
    'arch/xtensa/gnu/xtensa-modules.cpp',
    #'arch/z80/expressions.cpp',
    #'arch/z80/z80asm.cpp',
    'p/asm_arc.cpp',
    'p/asm_cris_gnu.cpp',
    'p/asm_hppa_gnu.cpp',
    'p/asm_lanai_gnu.cpp',
    'p/asm_mips_gnu.cpp',
    'p/asm_nios2.cpp',
    'p/asm_riscv.cpp',
    'p/asm_sparc_gnu.cpp',
    'p/asm_vax.cpp',
    'p/asm_xtensa.cpp',
    'p/asm_z80.cpp',
  ]
endif

rz_asm_inc = [
  platform_inc,
  include_directories(
    'arch/include',
    'arch',
    'arch/h8300',
    'arch/hexagon',
    'arch/msp430',
    'arch/rsp',
    'arch/mcore',
    'arch/v850',
    'arch/propeller',
    'arch/ebc',
    'arch/cr16',
    'arch/8051',
    'arch/v810',
    'arch/or1k',
    'arch/tricore',
  )
]

rz_asm = library('rz_asm', rz_asm_sources,
  include_directories: rz_asm_inc,
  dependencies: [
    rz_util_dep,
    rz_config_dep,
    rz_syscall_dep,
    rz_flag_dep,
    rz_parse_dep,
    rz_bin_dep,
    capstone_dep,
    dependency('rzspp'),
  ],
  install: true,
  implicit_include_directories: false,
  install_rpath: rpath_lib,
  soversion: rizin_libversion,
  version: rizin_version,
  name_suffix: lib_name_suffix,
  name_prefix: lib_name_prefix,
)

rz_asm_dep = declare_dependency(link_with: rz_asm,
                               include_directories: rz_asm_inc)
meson.override_dependency('rz_asm', rz_asm_dep)

modules += { 'rz_asm': {
    'target': rz_asm,
    'dependencies': ['rz_util', 'rz_config', 'rz_syscall', 'rz_flag', 'rz_parse', 'rz_bin'],
    'plugins': [asm_plugins]
}}

subdir('d')
subdir('cpus')
subdir('platforms')
