core_plugins = {
  'conf_name': 'plugins_core',
  'base_cname': 'rz_core_plugin_',
  'list': [
    'java',
    'dex',
  ],
}

subdir('cmd_descs')

rz_core_sources = [
  'agraph.cpp',
  'analysis_objc.cpp',
  'analysis_tp.cpp',
  'basefind.cpp',
  'cagraph.cpp',
  'cgraph.cpp',
  'canalysis.cpp',
  'cannotated_code.cpp',
  'carg.cpp',
  'casm.cpp',
  'cautocmpl.cpp',
  'cbin.cpp',
  'cconfig.cpp',
  'ccrypto.cpp',
  'cdebug.cpp',
  'cdwarf.cpp',
  'cesil.cpp',
  'cfile.cpp',
  'cflag.cpp',
  'chash.cpp',
  'cheap.cpp',
  'cil.cpp',
  'cio.cpp',
  'clang.cpp',
  'cmeta.cpp',
  'cmp.cpp',
  'core.cpp',
  'cparser.cpp',
  'cpdb.cpp',
  'cplugin.cpp',
  'cprint.cpp',
  'creg.cpp',
  'csign.cpp',
  'ctypes.cpp',
  'cvfile.cpp',
  'csyscall.cpp',
  'disasm.cpp',
  'fortune.cpp',
  'golang.cpp',
  'hack.cpp',
  'libs.cpp',
  'linux_heap_glibc.cpp',
  'linux_heap_glibc64.cpp',
  'project.cpp',
  'project_migrate.cpp',
  'rtr.cpp',
  #'rtr_http.cpp',
  #'rtr_shell.cpp',
  'seek.cpp',
  'serialize_core.cpp',
  'task.cpp',
  'yank.cpp',
  'p/core_dex.cpp',
  'p/core_java.cpp',
  cmd_descs_ch,
  'cmd/cmd.cpp',
  #'cmd/cmd_analysis.cpp',
  'cmd/cmd_api.cpp',
  'cmd/cmd_block.cpp',
  'cmd/cmd_cmp.cpp',
  #'cmd/cmd_debug.cpp',
  'cmd/cmd_egg.cpp',
  'cmd/cmd_eval.cpp',
  'cmd/cmd_flag.cpp',
  'cmd/cmd_flirt.cpp',
  'cmd/cmd_hash.cpp',
  #'cmd/cmd_help.cpp',
  'cmd/cmd_history.cpp',
  'cmd/cmd_info.cpp',
  'cmd/cmd_interpret.cpp',
  'cmd/cmd_macro.cpp',
  #'cmd/cmd_magic.cpp',
  'cmd/cmd_meta.cpp',
  'cmd/cmd_open.cpp',
  'cmd/cmd_plugins.cpp',
  #'cmd/cmd_print.cpp',
  'cmd/cmd_project.cpp',
  'cmd/cmd_quit.cpp',
  'cmd/cmd_remote.cpp',
  'cmd/cmd_resize.cpp',
  #'cmd/cmd_search.cpp',
  #'cmd/cmd_search_rop.cpp',
  'cmd/cmd_seek.cpp',
  'cmd/cmd_shell.cpp',
  'cmd/cmd_system.cpp',
  'cmd/cmd_tasks.cpp',
  'cmd/cmd_type.cpp',
  'cmd/cmd_write.cpp',
  'cmd/cmd_yank.cpp',
  'cmd/cmd_regs.cpp',
  'cmd/cmd_linux_heap_glibc.cpp',
  'cmd/cmd_windows_heap.cpp',
  'tui/biteditor.cpp',
  'tui/classes.cpp',
  'tui/colors.cpp',
  'tui/comments.cpp',
  'tui/config.cpp',
  'tui/define.cpp',
  'tui/esil.cpp',
  'tui/flags.cpp',
  'tui/hud.cpp',
  'tui/modes.cpp',
  'tui/visual.cpp',
  'tui/vmenus.cpp',
  'tui/vmenus_graph.cpp',
  'tui/vasm.cpp',
  'tui/vmarks.cpp',
  'tui/panels.cpp',
  'tui/tabs.cpp',
  'tui/rop.cpp',
]

rz_core_inc = ['.']
if host_machine.system() == 'windows'
  rz_core_sources += 'windows_heap.cpp'
endif
rz_core_inc = [platform_inc, 'cmd_descs']

shell_parser_dep = dependency('rizin-shell-parser')

rz_core_deps = [
  rz_util_dep,
  rz_demangler_dep,
  rz_diff_dep,
  rz_magic_dep,
  rz_socket_dep,
  rz_flag_dep,
  rz_cons_dep,
  rz_lang_dep,
  rz_hash_dep,
  rz_crypto_dep,
  rz_io_dep,
  rz_reg_dep,
  rz_bp_dep,
  rz_syscall_dep,
  rz_parse_dep,
  rz_asm_dep,
  rz_egg_dep,
  rz_search_dep,
  rz_sign_dep,
  rz_il_dep,
  rz_analysis_dep,
  rz_type_dep,
  rz_debug_dep,
  rz_config_dep,
  rz_bin_dep,
  platform_deps,
  dependency('rzgdb'),
  dependency('rzheap'),
  shell_parser_dep,
  lrt,
  mth,
]

rz_core = library('rz_core', rz_core_sources,
  include_directories: rz_core_inc,
  dependencies: rz_core_deps,
  install: true,
  implicit_include_directories: false,
  install_rpath: rpath_lib,
  soversion: rizin_libversion,
  version: rizin_version,
  name_suffix: lib_name_suffix,
  name_prefix: lib_name_prefix,
)

rz_core_dep = declare_dependency(link_with: rz_core,
                                include_directories: rz_core_inc)
meson.override_dependency('rz_core', rz_core_dep)

modules += { 'rz_core': {
    'target': rz_core,
    'dependencies': [
      'rz_magic',
      'rz_util',
      'rz_demangler',
      'rz_diff',
      'rz_reg',
      'rz_syscall',
      'rz_search',
      'rz_cons',
      'rz_analysis',
      'rz_socket',
      'rz_type',
      'rz_io',
      'rz_lang',
      'rz_hash',
      'rz_flag',
      'rz_parse',
      'rz_egg',
      'rz_debug',
      'rz_crypto',
      'rz_config',
      'rz_bin',
      'rz_asm',
      'rz_bp',
      'rz_sign',
      'rz_il'
    ],
    'plugins': [core_plugins]
}}
